# folor

./: .gitignore  .releaserc  .releaserc.json  Cargo.toml  Makefile  README.md  commit-msg.sh  pre-commit.sh
.github/workflows/: ci.yml  release.yml
src/: binary.rs  config.rs  discovery.rs  file_ref.rs  main.rs  output.rs  reader.rs  signal.rs  supervisor.rs  watcher.rs
tap/Formula/: folor.rb
tests/: integration.rs
