[package]
name = "folor"
version = "0.1.0"
edition = "2021"
description = "Recursive tail -f with glob pattern matching"
license = "MIT"
repository = "https://github.com/sdkks/folor"

[[bin]]
name = "folor"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
globset = "0.4"
walkdir = "2"
humantime = "2"
is-terminal = "0.4"
crossbeam-channel = "0.5"
termcolor = "1"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }

[target.'cfg(target_os = "linux")'.dependencies]
notify = { version = "6", default-features = false }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
